plugins {
	id 'java'
    id 'org.spongepowered.plugin' version '0.9.0'
    id 'com.github.johnrengelman.shadow' version '4.0.4'
    id 'maven-publish'
}

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/pietelite/griefalert")
            credentials {
                username = project.findProperty("gpr.user")
                password = project.findProperty("gpr.key")
            }
        }
    }
    publications {
        gpr(MavenPublication) {
            from(components.java)
        }
    }
}

repositories {
	mavenCentral()
    google()
    maven { url "http://maven.sk89q.com/repo/" }
    jcenter()
    flatDir {
        dirs 'libs'
    }
}

archivesBaseName = 'griefalert' // Project Base Name Here
group = 'com.minecraftonline.sponge' // This is a MinecraftOnline project
version = '1.1.1' // Project Version

sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8

ext.sponge_version = '7.1.0' // SpongeAPI version
ext.authors = ['PietElite', 'darkdiplomat', 'BastetFurry', '14mRh4X0r'] // Separate with commas (e.g. ['SlowRiot', 'FliPPeh', '14mRh4X0r', 'techkid6'])

compileJava {
    options.compilerArgs += ["-parameters"]
}

dependencies {
    implementation 'org.spongepowered:spongeapi:7.1.0'
    implementation 'com.sk89q.worldedit:worldedit-core:6.1.4-SNAPSHOT'
    implementation 'com.sk89q.worldedit:worldedit-sponge:6.1.7-SNAPSHOT'
    implementation fileTree(dir: 'libs', include: '*.jar')
    shadow fileTree(dir: 'libs', include: 'shadow/*.jar')
    implementation 'org.xerial:sqlite-jdbc:3.8.11.2'
    implementation 'mysql:mysql-connector-java:8.0.19'
    implementation 'org.mariadb.jdbc:mariadb-java-client:2.5.4'
    testImplementation('junit:junit:4.13')
}

sponge.plugin.meta {
    authors = ext.authors
}

//jar {
//    classifier = "original"
//}

shadowJar {
    configurations = [project.configurations.shadow]
    baseName = 'griefalert'
    classifier = ''
}

jar.manifest {
    attributes "Implementation-Title": name,
            "Implementation-Version": version,
            "Implementation-Vendor": "MinecraftOnline"
}

